# Final-project-Computer-Vision

./: .gitignore  AndreaMarigo.cpp  CMakeLists.txt  README.md  fileManagement.cpp  main.cpp  main.h  performanceMetrics.cpp  preprocessing.cpp  prova_preprocessing  prova_preprocessing.cpp  svm.cpp  templateMatching.cpp  test.cpp
test/labels/: IMG_27.txt
